# bevy_asteroids

./: .gitattributes  Cargo.toml  LICENSE  README.md  roadmap.todo.md
.github/workflows/: release.yml
assets/: LICENSE
assets_src/: asteroids.aseprite  asteroids.json  asteroids_dbg.aseprite  saucer.ase  ship.ase  ship.json
src/: .main.rs.swp  asteroids.rs  audio.rs  collision.rs  component.rs  controls.rs  fire.rs  lib.rs  main.rs  movement.rs  player.rs  rules.rs  score.rs  startup.rs  system.rs  title.rs  ui.rs  utils.rs  wrap.rs
