[package]
name = "asteroid"
version = "0.2.3"
authors = ["Oragon Efreet <kevin.dorange@protonmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
#bevy = "0.4"
rand = "0.8.0"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"




